# serverless-wasm-functions-workshop

./: .gitignore  .markdownlint.json  README.md
developer-machine-setup/: README.md
hol1-build-and-deploy/: README.md
hol2-edge-native-use-cases/: README.md
hol2-edge-native-use-cases/solution-rust/: spin.toml
hol2-edge-native-use-cases/solution-rust/api/: Cargo.toml
hol2-edge-native-use-cases/solution-rust/api/src/: lib.rs
hol2-edge-native-use-cases/solution-rust/frontend/: main.css
hol2-edge-native-use-cases/solution-ts/: package-lock.json  spin.toml
hol2-edge-native-use-cases/solution-ts/api/: package-lock.json  package.json
hol2-edge-native-use-cases/solution-ts/frontend/: index.html
hol2-edge-native-use-cases/start-rust/: Cargo.toml  spin.toml
hol2-edge-native-use-cases/start-rust/api/src/: lib.rs
hol2-edge-native-use-cases/start-rust/src/: lib.rs
hol2-edge-native-use-cases/start-ts/: package-lock.json  package.json  spin.toml
hol2-edge-native-use-cases/start-ts/api/: package-lock.json  package.json
hol2-edge-native-use-cases/start-ts/src/: index.ts
hol3-edge-accelerated-genai/: README.md
hol3-edge-accelerated-genai/solution-rust/: Cargo.toml  spin.toml
hol3-edge-accelerated-genai/solution-rust/src/: lib.rs
hol3-edge-accelerated-genai/solution-ts/: spin.toml
hol3-edge-accelerated-genai/start-rust/: Cargo.toml  spin.toml
hol3-edge-accelerated-genai/start-ts/: package-lock.json  package.json  spin.toml
infra/: .terraform.lock.hcl  README.md  _meta.tf  _outputs.tf  _variables.tf  main.tf
infra/userdata/: linode.yml
(+9 files in other folders)
