[package]
name = "api"
authors = ["Thorsten Hans <thans@akamai.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "5.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[workspace]
